--- a/home.css
+++ b/home.css
@@ -11,7 +11,9 @@ header{
     background-color: #2c72b7;
     backdrop-filter: blur(60px);
     border-radius: 20px 20px 20px 20px;
+    margin: 0;
 }
+
 .logo{
     width: 150px;
     display: flex;
