--- a/produto.css
+++ b/produto.css
@@ -40,3 +40,19 @@ a{
     text-shadow: #2c72b7 1px 1px 1px;
     text-decoration: none;
 }
+
+.btn{
+    background-color: #2c72b7;
+    color: #fffaf0;
+    font-weight: 600;
+    border-radius: 10px;
+    border: none;
+    padding: 10px 20px;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.novoProduto{
+    display: flex;
+    flex-direction: column;
+}
