--- a/produto.css
+++ b/produto.css
@@ -21,6 +21,18 @@ header{
     align-items: center;
 }
 
+.menuPrincipal{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-decoration: none;
+    list-style: none;
+    color: #fffaf0;
+    padding: 16px;
+    
+    
+}
+
 .cBotao{
     color: #fffaf0;
     font-size: 24px;
@@ -33,17 +45,6 @@ header{
 }
 
 
-ul{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    text-decoration: none;
-    list-style: none;
-    color: #fffaf0;
-    padding: 16px;
-    
-   
-}
 
 .container {
     width: 80%;
@@ -61,8 +62,8 @@ h1, h2 {
 form {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 20px;
-    margin-bottom: 30px;
+    gap: 10px;
+    margin-bottom: 20px;
 }
 
 form label {
@@ -74,6 +75,7 @@ form input, form button {
     font-size: 1rem;
     border: 1px solid #ccc;
     border-radius: 5px;
+
 }
 
 form button {
@@ -82,6 +84,7 @@ form button {
     color: white;
     border: none;
     cursor: pointer;
+    align-items: right;
 }
 
 form button:hover {
