--- a/vendas.css
+++ b/vendas.css
@@ -1,32 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    background-color: #f4f4f4;
+body{
+    background-color: #FFF5EE;
+    font-family: 'Montserrat', sans-serif;
+    color: #2c72b7;
+    font-weight: 600
+   
 }
 
-header {
-    background-color: #333;
-    color: white;
-    padding: 15px 20px;
-}
-
-header nav h1 {
-    display: inline-block;
+header{
+    background-color: #2c72b7;
+    backdrop-filter: blur(60px);
+    border-radius: 20px 20px 20px 20px;
     margin: 0;
 }
 
-.nav-link {
-    color: white;
-    margin: 0 15px;
+.logo{
+    width: 150px;
+    display: flex;
+    align-items: center;
+}
+
+ul{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-decoration: none;
+    list-style: none;
+    color: #fffaf0;
+    padding: 16px;
+    
+   
+}
+
+a{
+    color: #fffaf0;
+    font-size: 24px;
+    font-weight: 600;
+    text-shadow: #2c72b7 1px 1px 1px;
     text-decoration: none;
 }
 
-.nav-link:hover {
-    text-decoration: underline;
-}
+
 
 main {
     max-width: 1200px;
@@ -96,4 +111,10 @@ table th, table td {
 .actions .status {
     background-color: #17a2b8;
     color: white;
+}
+
+footer {
+    display: flex;
+    justify-content:center;
+    align-items: center;    
 }
