--- a/bem_vindo.css
+++ b/bem_vindo.css
@@ -6,7 +6,7 @@ body{
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     background-repeat: no-repeat;
-    height: 100vh;
+    height: 150vh;
     
 }
 header{
@@ -24,7 +24,7 @@ header{
 }
 .menuPrincipal{
     display: flex;
-    justify-content: space-around;
+    gap: 10px;
     align-items: center;
     text-decoration: none;
     list-style: none;
@@ -42,40 +42,14 @@ header{
     text-decoration: none; 
     background-color: #2c72b7 ;
     border: none;
+    height: 50px;
+    width: 200px;
+
     
 }
 
 .cBotao:active{
     background: #8ED9F1;
     border-radius: 100px;
-    padding: 10px;
-/*     height: ;
-    width: ; */
 }
 
-h1{
-    margin-left: 45%;
-    margin-top: 8%;
-}
-
-/* display do article */
-article{
-    height: 500px;
-    width: 60%;
-    margin: auto;
-    margin-top: 50px;
-    background-color:rgba(173, 216, 230, 0.425);
-    padding: 3%;
-    
-}
-.texto{
-    width: 40%;
-    margin: auto;
-    text-align: justify;
-}
-
-.titulo{
-    
-    margin: auto;
-    text-align: justify;
-}
