--- a/cadastro.css
+++ b/cadastro.css
@@ -1,36 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 
-
 .logo{
-    width: 150px;
+    width: 200px;
     display: flex;
-    
-   
+    margin-bottom: 10px;
 }
-
-
-
 body{
     font-family: 'Montserrat', sans-serif;
     background-color: #2c72b7;
     color: #fffaf0;
     font-weight: 600;
+    padding: 0;
+    border: #313131;
 }
-
-
+h1{
+    font-size: 40px;
+    margin: 0;
+}
 .container{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     height: 100vh;
     font-family: 'Montserrat', sans-serif;
     color: #fffaf0;
-    margin-top: 3%;
+    margin-top: 0;
+    padding: 0;
 }
-
-
 
 .cadastro{
     display: flex;
@@ -39,14 +36,8 @@ body{
     justify-content: center;
     gap: 10px;
     font-weight: 600;
-   
     width: 100%;
-    
 }
-    
-    
-    
-
 form .input-group{
     display: flex;
     flex-direction: column;
@@ -54,7 +45,6 @@ form .input-group{
     align-items: center;
     gap: 10px;
     font-weight: 600;
-   
 }
     
 input{
@@ -74,8 +64,17 @@ form .input-group input{
     outline: none;
     border: none;
     color: #313131;
-    transition: all 0.4s ease;
-   
+    transition: all 0.4s ease;  
+}
+
+.social{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    background: none;
+    text-decoration: none;
 }
 
 .btn{
@@ -89,7 +88,6 @@ form .input-group input{
     cursor: pointer;
 }
 
-
 .social{
     display: flex;
     flex-direction: row;
@@ -99,39 +97,33 @@ form .input-group input{
     background: none;
     text-decoration: none;
 }
-
-
-.btn{
-    background-color:  #fffaf0;
-    color: #2c72b7;
-    font-weight: 600;
-    border-radius: 10px;
-    border: none;
-    padding: 10px 20px;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-
-.social{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    background: none;
-    text-decoration: none;
-}
-
-
-
 footer{
     display: flex;
     justify-content:center;
     align-items: center;    
-
+    margin: 0;
+    padding: 10px auto;
+    background-color: rgba(211, 211, 211, 0.395);
 }
 
+.alink{
+    color: inherit;
+    text-decoration: none;
+}
 
-
-    
+button:hover{
+    color: #fffaf0;
+    background-color: #2c72b7;
+    text-decoration: none;
+}
+.container2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 40%;
+    margin: 10px auto;
+    padding: 20px;
+    background-color: rgba(211, 211, 211, 0.395);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 20px 20px 20px 20px;
+}
